Fixed navigate to event Changed hover states on foot buttons to be neutral Fixed operator styling Added hover text to add to betslip button, in case it's truncated

--- a/src/scss/widget/_overrides.scss
+++ b/src/scss/widget/_overrides.scss
@@ -121,3 +121,7 @@
    cursor: default; }
 .KambiWidget-outcome--suspended .KambiWidget-outcome__odds-wrapper {
    display: none; }
+
+.kw-btn:hover{
+   background-color: $color-4-1-card-background-hover;
+}
